--- a/resources/ObjectExternal/demovjs/HTML.html
+++ b/resources/ObjectExternal/demovjs/HTML.html
@@ -9,16 +9,24 @@
 		</div>
 	</div>
 	<div class="container">
-		<div class="row" v-if="products">
-			<template v-for="product in products">
+		<div class="row product" v-if="item" v-on:click="select(null)">
+			<template>
 				<div class="col-md-4">
-					<h1 class="text-primary text-center title">{{ product.demoPrdName }}</h1>
+					<img v-if="item.demoPrdPicture" v-bind:src="'data:' + item.demoPrdPicture.mime + ';base64,' + item.demoPrdPicture.content"/>
+				</div>
+				<div class="col-md-8 text-documentation" v-html="item.demoPrdDocumentation"></div>
+			</template>
+		</div>
+		<div class="row" v-if="list">
+			<template v-for="item in list">
+				<div class="col-md-4" v-on:click="select(item)">
+					<h1 class="text-primary text-center title">{{ item.demoPrdName }}</h1>
 					<h3 class="text-muted text-center">
-						<img v-if="product.demoPrdPicture" v-bind:src="'data:' + product.demoPrdPicture.mime + ';base64,' + product.demoPrdPicture.content"/>
-						<br/>{{ product.demoPrdReference }}
+						<img v-if="item.demoPrdPicture" v-bind:src="'data:' + item.demoPrdPicture.mime + ';base64,' + item.demoPrdPicture.content"/>
+						<br/>{{ item.demoPrdReference }}
 					</h3>
-					<p class="text-left text-muted">{{ product.demoPrdDescription }}</p>
-					<p class="text-right"><a href="javascript:" class="btn btn-danger btn-md">{{ parseFloat(product.demoPrdUnitPrice).toFixed(2) }}</a></p>
+					<p class="text-left text-muted">{{ item.demoPrdDescription }}</p>
+					<p class="text-right"><span class="btn btn-danger btn-md">{{ parseFloat(item.demoPrdUnitPrice).toFixed(2) }}</span></p>
 				</div>
 			</template>
 		</div>
