--- a/resources/ObjectExternal/demovjs/HTML.html
+++ b/resources/ObjectExternal/demovjs/HTML.html
@@ -9,7 +9,7 @@
 		</div>
 	</div>
 	<div class="container">
-		<div class="row product" v-if="item" v-on:click="select(null)">
+		<div class="row product clickable" v-if="item" v-on:click="select(null)">
 			<template>
 				<div class="col-md-4 text-center">
 					<h1 class="text-primary">{{ item.demoPrdName }}</h1>
@@ -19,9 +19,9 @@
 				<div class="col-md-8 text-documentation" v-html="item.demoPrdDocumentation"></div>
 			</template>
 		</div>
-		<div class="row" v-if="list">
+		<div class="row" v-if="!item">
 			<template v-for="item in list">
-				<div class="col-md-4" v-on:click="select(item)">
+				<div class="col-md-4 clickable" v-on:click="select(item)">
 					<h1 class="text-primary text-center">{{ item.demoPrdName }}</h1>
 					<h3 class="text-muted text-center">
 						<img v-if="item.demoPrdPicture" v-bind:src="'data:' + item.demoPrdPicture.mime + ';base64,' + item.demoPrdPicture.content"/>
@@ -32,7 +32,7 @@
 				</div>
 			</template>
 		</div>
-		<div class="row text-center" v-else><h3>Loading...</h3></div>
+		<div class="row text-center" v-if="!list && !item"><h3>Loading...</h3></div>
 	</div>
 	<div class="row">
 		<div class="col-md-12">
