--- a/resources/ObjectExternal/demovjs/HTML.html
+++ b/resources/ObjectExternal/demovjs/HTML.html
@@ -13,7 +13,7 @@
 			<template>
 				<div class="col-md-4 text-center">
 					<h1 class="text-primary">{{ item.demoPrdName }}</h1>
-					<img v-if="item.demoPrdPicture" v-bind:src="'data:' + item.demoPrdPicture.mime + ';base64,' + item.demoPrdPicture.content"/>
+					<img alt="Product picture" v-if="item.demoPrdPicture" v-bind:src="'data:' + item.demoPrdPicture.mime + ';base64,' + item.demoPrdPicture.content"/>
 					<br/><span class="text-muted">{{ item.demoPrdReference }}</span>
 				</div>
 				<div class="col-md-8 text-documentation" v-html="item.demoPrdDocumentation"></div>
@@ -24,7 +24,7 @@
 				<div class="col-md-4 clickable" v-on:click="select(item)">
 					<h1 class="text-primary text-center">{{ item.demoPrdName }}</h1>
 					<h3 class="text-muted text-center">
-						<img v-if="item.demoPrdPicture" v-bind:src="'data:' + item.demoPrdPicture.mime + ';base64,' + item.demoPrdPicture.content"/>
+						<img alt="Product picture" v-if="item.demoPrdPicture" v-bind:src="'data:' + item.demoPrdPicture.mime + ';base64,' + item.demoPrdPicture.content"/>
 						<br/>{{ item.demoPrdReference }}
 					</h3>
 					<p class="text-left text-muted">{{ item.demoPrdDescription }}</p>
