--- a/resources/ObjectExternal/DemoVueJSFrontend/HTML.html
+++ b/resources/ObjectExternal/DemoVueJSFrontend/HTML.html
@@ -1,4 +1,4 @@
-<div id="demovjs">
+<div id="demovuejsfrontend">
 	<div class="cover">
 		<div class="cover-image" v-bind:style="{ backgroundImage: 'url(' + bannerURL + ')' }"></div>
 		<div class="row">
