Vue 2 and 3 support

--- a/resources/ObjectExternal/DemoVueJSFrontend/HTML.html
+++ b/resources/ObjectExternal/DemoVueJSFrontend/HTML.html
@@ -1,10 +1,11 @@
 <div id="demovuejsfrontend">
-	<div class="cover">
-		<div class="cover-image" v-bind:style="{ backgroundImage: 'url(' + bannerURL + ')' }"></div>
+	<div class="cover" v-bind:style="{ backgroundImage: 'url(' + bannerURL + ')' }">
 		<div class="row">
 			<div class="col-md-12 text-center head-title">
 				<h1>Simplicit&eacute; + Vue.js<span class="text-primary"> Demo</span></h1>
-				<div class="baseline"><h2>This is a sample demo page using the <strong>Vue.js</strong> framework</h2></div>
+				<div class="baseline">
+					<h2>This is a sample demo page using the <strong>Vue.js</strong> framework</h2>
+				</div>
 			</div>
 		</div>
 	</div>
