--- a/resources/ObjectExternal/DemoVueJSFrontend/HTML.html
+++ b/resources/ObjectExternal/DemoVueJSFrontend/HTML.html
@@ -11,18 +11,16 @@
 	</div>
 	<div class="container">
 		<div class="row product clickable" v-if="item" v-on:click="select(null)">
-			<template>
-				<div class="col-md-4 text-center">
-					<h1 class="text-primary">{{ item.demoPrdName }}</h1>
-					<img v-if="item.demoPrdPicture" v-bind:src="'data:' + item.demoPrdPicture.mime + ';base64,' + item.demoPrdPicture.content" v-bind:alt="item.demoPrdName"/>
-					<br/><span class="text-muted">{{ item.demoPrdReference }}</span>
-				</div>
-				<div class="col-md-8 text-documentation" v-html="item.demoPrdDocumentation"></div>
-			</template>
+			<div class="col-md-4 text-center">
+				<h1 class="text-primary">{{ item.demoPrdName }}</h1>
+				<img v-if="item.demoPrdPicture" v-bind:src="'data:' + item.demoPrdPicture.mime + ';base64,' + item.demoPrdPicture.content" v-bind:alt="item.demoPrdName"/>
+				<br/><span class="text-muted">{{ item.demoPrdReference }}</span>
+			</div>
+			<div class="col-md-8 text-documentation" v-html="item.demoPrdDocumentation"></div>
 		</div>
 		<div class="row" v-if="!item">
 			<template v-for="item in list">
-				<div class="col-md-4">
+				<div class="col-md-4 clickable" v-on:click="select(item)">
 					<h1 class="text-primary text-center">{{ item.demoPrdName }}</h1>
 					<h3 class="text-muted text-center">
 						<img v-if="item.demoPrdPicture" v-bind:src="'data:' + item.demoPrdPicture.mime + ';base64,' + item.demoPrdPicture.content" v-bind:alt="item.demoPrdName"/>
