--- a/resources/ObjectExternal/DemoVueJSFrontend/HTML.html
+++ b/resources/ObjectExternal/DemoVueJSFrontend/HTML.html
@@ -10,7 +10,7 @@
 		</div>
 	</div>
 	<div class="container">
-		<div class="row product clickable" v-if="item" v-on:click="select(null)">
+		<div class="row product clickable" style="display: none;" v-if="item" v-show="item" v-on:click="select(null)">
 			<div class="col-md-4 text-center">
 				<h1 class="text-primary">{{ item.demoPrdName }}</h1>
 				<img v-if="item.demoPrdPicture" v-bind:src="'data:' + item.demoPrdPicture.mime + ';base64,' + item.demoPrdPicture.content" v-bind:alt="item.demoPrdName"/>
@@ -18,7 +18,7 @@
 			</div>
 			<div class="col-md-8 text-documentation" v-html="item.demoPrdDocumentation"></div>
 		</div>
-		<div class="row" v-if="!item">
+		<div class="row" v-else>
 			<template v-for="item in list">
 				<div class="col-md-4 clickable" v-on:click="select(item)">
 					<h1 class="text-primary text-center">{{ item.demoPrdName }}</h1>
