--- a/resources/ObjectExternal/DemoVueJSFrontend/HTML.html
+++ b/resources/ObjectExternal/DemoVueJSFrontend/HTML.html
@@ -35,7 +35,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-12">
-			<hr><p class="text-center">&copy; Simplcit&eacute; Software</p>
+			<hr><p class="text-muted text-center">&copy; Simplcit&eacute; Software</p>
 		</div>
 	</div>
 </div>
